// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MainLayout - 快照测试 响应式布局 应该在大屏幕上显示所有面板 1`] = `
<div>
  <div
    class="flex h-[100dvh] bg-gray-950 text-gray-100 font-sans overflow-hidden relative selection:bg-blue-500/30"
  >
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
    <main
      class="flex-1 flex flex-col min-w-0 relative transition-all duration-300"
    >
      <header
        class="flex items-center justify-between px-4 py-3 bg-gray-900 border-b border-gray-800 md:hidden shrink-0 select-none"
      >
        <button
          class="p-1 -ml-1 text-gray-400 active:text-white"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="font-bold text-gray-200 truncate max-w-[200px] text-sm"
        >
          test.md
        </span>
        <button
          class="p-1 -mr-1 text-blue-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-message-square"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
            />
          </svg>
        </button>
      </header>
      <div
        class="hidden md:flex items-center justify-between bg-gray-900 border-b border-gray-800 h-10 px-4 shrink-0 select-none"
      >
        <div
          class="flex items-center gap-2 text-gray-500"
        >
          <button
            class="hover:text-white transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left-close"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="m16 15-3-3 3-3"
              />
            </svg>
          </button>
          <span
            class="text-xs"
          >
            Test Project
             / 
            test.md
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="flex items-center gap-1 text-xs px-2 py-1 rounded transition-colors bg-blue-600/20 text-blue-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            Agent
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-hidden relative bg-[#0d1117]"
      >
        <div
          class="flex flex-col h-full bg-[#0d1117] w-full h-full"
        >
          <div
            class="flex items-center justify-between px-2 sm:px-4 py-2 border-b shrink-0 transition-colors bg-[#161b22] border-gray-800"
          >
            <div
              class="flex items-center gap-2 min-w-0 flex-1 overflow-hidden"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text text-blue-400 shrink-0"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span
                class="truncate font-mono text-xs sm:text-sm text-gray-200"
              >
                test.md
              </span>
              <span
                class="text-[10px] text-gray-500 font-mono hidden sm:inline"
              >
                7
                 字
              </span>
              <span
                class="text-[10px] text-gray-600 font-mono hidden md:inline"
              >
                Ln 
                1
                , Col 
                1
              </span>
            </div>
            <div
              class="flex items-center gap-0.5 sm:gap-1 bg-gray-800/50 rounded-lg p-0.5 border border-gray-700/50 shrink-0"
            >
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-400 hover:text-white hover:bg-gray-700"
                title="搜索 (Ctrl+F)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="自动换行: 关闭"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-text-align-justify"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 5h18"
                  />
                  <path
                    d="M3 12h18"
                  />
                  <path
                    d="M3 19h18"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-r border-gray-700 mr-1 text-gray-500 hover:text-gray-300"
                title="显示行号"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-list-ordered"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5h10"
                  />
                  <path
                    d="M11 12h10"
                  />
                  <path
                    d="M11 19h10"
                  />
                  <path
                    d="M4 4h1v5"
                  />
                  <path
                    d="M4 9h2"
                  />
                  <path
                    d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-700 cursor-not-allowed"
                disabled=""
                title="Undo (Ctrl+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-ccw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                  />
                  <path
                    d="M3 3v5h5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-700 cursor-not-allowed"
                disabled=""
                title="Redo (Ctrl+Shift+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-cw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all bg-gray-700 text-blue-400 shadow-sm"
                title="Edit Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-pen-line"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21h8"
                  />
                  <path
                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="Preview Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-eye"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-l border-gray-700 ml-1 text-gray-500 hover:text-gray-300"
                title="开启分屏对比"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-columns2 lucide-columns-2"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M12 3v18"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex-1 overflow-hidden relative bg-[#0d1117]"
          >
            <div
              class="h-full relative flex"
            >
              <div
                class="w-full h-full transition-all"
              >
                <div
                  class="flex h-full w-full relative overflow-hidden"
                >
                  <textarea
                    class="
                flex-1 h-full w-full bg-[#0d1117] text-gray-300 resize-none focus:outline-none
                font-mono text-sm sm:text-base leading-relaxed
                pt-4 sm:pt-6 pb-20
                pl-4 sm:pl-6
                whitespace-pre overflow-x-auto
                
            "
                    placeholder="在此处开始您的创作..."
                    spellcheck="false"
                  >
                    content
                  </textarea>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
  </div>
</div>
`;

exports[`MainLayout - 快照测试 响应式布局 应该在小屏幕上调整布局 1`] = `
<div>
  <div
    class="flex h-[100dvh] bg-gray-950 text-gray-100 font-sans overflow-hidden relative selection:bg-blue-500/30"
  >
    <main
      class="flex-1 flex flex-col min-w-0 relative transition-all duration-300"
    >
      <header
        class="flex items-center justify-between px-4 py-3 bg-gray-900 border-b border-gray-800 md:hidden shrink-0 select-none"
      >
        <button
          class="p-1 -ml-1 text-gray-400 active:text-white"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="font-bold text-gray-200 truncate max-w-[200px] text-sm"
        >
          test.md
        </span>
        <button
          class="p-1 -mr-1 text-blue-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-message-square"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
            />
          </svg>
        </button>
      </header>
      <div
        class="hidden md:flex items-center justify-between bg-gray-900 border-b border-gray-800 h-10 px-4 shrink-0 select-none"
      >
        <div
          class="flex items-center gap-2 text-gray-500"
        >
          <button
            class="hover:text-white transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left-close"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="m16 15-3-3 3-3"
              />
            </svg>
          </button>
          <span
            class="text-xs"
          >
            Test Project
             / 
            test.md
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="flex items-center gap-1 text-xs px-2 py-1 rounded transition-colors bg-blue-600/20 text-blue-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            Agent
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-hidden relative bg-[#0d1117]"
      >
        <div
          class="flex flex-col h-full bg-[#0d1117] w-full h-full"
        >
          <div
            class="flex items-center justify-between px-2 sm:px-4 py-2 border-b shrink-0 transition-colors bg-[#161b22] border-gray-800"
          >
            <div
              class="flex items-center gap-2 min-w-0 flex-1 overflow-hidden"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text text-blue-400 shrink-0"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span
                class="truncate font-mono text-xs sm:text-sm text-gray-200"
              >
                test.md
              </span>
              <span
                class="text-[10px] text-gray-500 font-mono hidden sm:inline"
              >
                7
                 字
              </span>
              <span
                class="text-[10px] text-gray-600 font-mono hidden md:inline"
              >
                Ln 
                1
                , Col 
                1
              </span>
            </div>
            <div
              class="flex items-center gap-0.5 sm:gap-1 bg-gray-800/50 rounded-lg p-0.5 border border-gray-700/50 shrink-0"
            >
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-400 hover:text-white hover:bg-gray-700"
                title="搜索 (Ctrl+F)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="自动换行: 关闭"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-text-align-justify"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 5h18"
                  />
                  <path
                    d="M3 12h18"
                  />
                  <path
                    d="M3 19h18"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-r border-gray-700 mr-1 text-gray-500 hover:text-gray-300"
                title="显示行号"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-list-ordered"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5h10"
                  />
                  <path
                    d="M11 12h10"
                  />
                  <path
                    d="M11 19h10"
                  />
                  <path
                    d="M4 4h1v5"
                  />
                  <path
                    d="M4 9h2"
                  />
                  <path
                    d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-700 cursor-not-allowed"
                disabled=""
                title="Undo (Ctrl+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-ccw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                  />
                  <path
                    d="M3 3v5h5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-700 cursor-not-allowed"
                disabled=""
                title="Redo (Ctrl+Shift+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-cw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all bg-gray-700 text-blue-400 shadow-sm"
                title="Edit Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-pen-line"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21h8"
                  />
                  <path
                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="Preview Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-eye"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-l border-gray-700 ml-1 text-gray-500 hover:text-gray-300"
                title="开启分屏对比"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-columns2 lucide-columns-2"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M12 3v18"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex-1 overflow-hidden relative bg-[#0d1117]"
          >
            <div
              class="h-full relative flex"
            >
              <div
                class="w-full h-full transition-all"
              >
                <div
                  class="flex h-full w-full relative overflow-hidden"
                >
                  <textarea
                    class="
                flex-1 h-full w-full bg-[#0d1117] text-gray-300 resize-none focus:outline-none
                font-mono text-sm sm:text-base leading-relaxed
                pt-4 sm:pt-6 pb-20
                pl-4 sm:pl-6
                whitespace-pre overflow-x-auto
                
            "
                    placeholder="在此处开始您的创作..."
                    spellcheck="false"
                  >
                    content
                  </textarea>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`MainLayout - 快照测试 桌面视图布局 应该渲染主布局结构 1`] = `
<div>
  <div
    class="flex h-[100dvh] bg-gray-950 text-gray-100 font-sans overflow-hidden relative selection:bg-blue-500/30"
  >
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
    <main
      class="flex-1 flex flex-col min-w-0 relative transition-all duration-300"
    >
      <header
        class="flex items-center justify-between px-4 py-3 bg-gray-900 border-b border-gray-800 md:hidden shrink-0 select-none"
      >
        <button
          class="p-1 -ml-1 text-gray-400 active:text-white"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="font-bold text-gray-200 truncate max-w-[200px] text-sm"
        >
          test.md
        </span>
        <button
          class="p-1 -mr-1 text-blue-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-message-square"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
            />
          </svg>
        </button>
      </header>
      <div
        class="hidden md:flex items-center justify-between bg-gray-900 border-b border-gray-800 h-10 px-4 shrink-0 select-none"
      >
        <div
          class="flex items-center gap-2 text-gray-500"
        >
          <button
            class="hover:text-white transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left-close"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="m16 15-3-3 3-3"
              />
            </svg>
          </button>
          <span
            class="text-xs"
          >
            Test Project
             / 
            test.md
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="flex items-center gap-1 text-xs px-2 py-1 rounded transition-colors bg-blue-600/20 text-blue-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            Agent
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-hidden relative bg-[#0d1117]"
      >
        <div
          class="flex flex-col h-full bg-[#0d1117] w-full h-full"
        >
          <div
            class="flex items-center justify-between px-2 sm:px-4 py-2 border-b shrink-0 transition-colors bg-[#161b22] border-gray-800"
          >
            <div
              class="flex items-center gap-2 min-w-0 flex-1 overflow-hidden"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text text-blue-400 shrink-0"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span
                class="truncate font-mono text-xs sm:text-sm text-gray-200"
              >
                test.md
              </span>
              <span
                class="text-[10px] text-gray-500 font-mono hidden sm:inline"
              >
                7
                 字
              </span>
              <span
                class="text-[10px] text-gray-600 font-mono hidden md:inline"
              >
                Ln 
                1
                , Col 
                1
              </span>
            </div>
            <div
              class="flex items-center gap-0.5 sm:gap-1 bg-gray-800/50 rounded-lg p-0.5 border border-gray-700/50 shrink-0"
            >
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-400 hover:text-white hover:bg-gray-700"
                title="搜索 (Ctrl+F)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="自动换行: 关闭"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-text-align-justify"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 5h18"
                  />
                  <path
                    d="M3 12h18"
                  />
                  <path
                    d="M3 19h18"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-r border-gray-700 mr-1 text-gray-500 hover:text-gray-300"
                title="显示行号"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-list-ordered"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5h10"
                  />
                  <path
                    d="M11 12h10"
                  />
                  <path
                    d="M11 19h10"
                  />
                  <path
                    d="M4 4h1v5"
                  />
                  <path
                    d="M4 9h2"
                  />
                  <path
                    d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-700 cursor-not-allowed"
                disabled=""
                title="Undo (Ctrl+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-ccw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                  />
                  <path
                    d="M3 3v5h5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-700 cursor-not-allowed"
                disabled=""
                title="Redo (Ctrl+Shift+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-cw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all bg-gray-700 text-blue-400 shadow-sm"
                title="Edit Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-pen-line"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21h8"
                  />
                  <path
                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="Preview Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-eye"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-l border-gray-700 ml-1 text-gray-500 hover:text-gray-300"
                title="开启分屏对比"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-columns2 lucide-columns-2"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M12 3v18"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex-1 overflow-hidden relative bg-[#0d1117]"
          >
            <div
              class="h-full relative flex"
            >
              <div
                class="w-full h-full transition-all"
              >
                <div
                  class="flex h-full w-full relative overflow-hidden"
                >
                  <textarea
                    class="
                flex-1 h-full w-full bg-[#0d1117] text-gray-300 resize-none focus:outline-none
                font-mono text-sm sm:text-base leading-relaxed
                pt-4 sm:pt-6 pb-20
                pl-4 sm:pl-6
                whitespace-pre overflow-x-auto
                
            "
                    placeholder="在此处开始您的创作..."
                    spellcheck="false"
                  >
                    content
                  </textarea>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
  </div>
</div>
`;

exports[`MainLayout - 快照测试 面板切换交互 应该支持侧边栏开关 1`] = `
<div>
  <div
    class="flex h-[100dvh] bg-gray-950 text-gray-100 font-sans overflow-hidden relative selection:bg-blue-500/30"
  >
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
    <main
      class="flex-1 flex flex-col min-w-0 relative transition-all duration-300"
    >
      <header
        class="flex items-center justify-between px-4 py-3 bg-gray-900 border-b border-gray-800 md:hidden shrink-0 select-none"
      >
        <button
          class="p-1 -ml-1 text-gray-400 active:text-white"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="font-bold text-gray-200 truncate max-w-[200px] text-sm"
        >
          test.md
        </span>
        <button
          class="p-1 -mr-1 text-blue-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-message-square"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
            />
          </svg>
        </button>
      </header>
      <div
        class="hidden md:flex items-center justify-between bg-gray-900 border-b border-gray-800 h-10 px-4 shrink-0 select-none"
      >
        <div
          class="flex items-center gap-2 text-gray-500"
        >
          <button
            class="hover:text-white transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left-close"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="m16 15-3-3 3-3"
              />
            </svg>
          </button>
          <span
            class="text-xs"
          >
            Test Project
             / 
            test.md
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="flex items-center gap-1 text-xs px-2 py-1 rounded transition-colors bg-blue-600/20 text-blue-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            Agent
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-hidden relative bg-[#0d1117]"
      >
        <div
          class="flex flex-col h-full bg-[#0d1117] w-full h-full"
        >
          <div
            class="flex items-center justify-between px-2 sm:px-4 py-2 border-b shrink-0 transition-colors bg-[#161b22] border-gray-800"
          >
            <div
              class="flex items-center gap-2 min-w-0 flex-1 overflow-hidden"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text text-blue-400 shrink-0"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span
                class="truncate font-mono text-xs sm:text-sm text-gray-200"
              >
                test.md
              </span>
              <span
                class="text-[10px] text-gray-500 font-mono hidden sm:inline"
              >
                7
                 字
              </span>
              <span
                class="text-[10px] text-gray-600 font-mono hidden md:inline"
              >
                Ln 
                1
                , Col 
                1
              </span>
            </div>
            <div
              class="flex items-center gap-0.5 sm:gap-1 bg-gray-800/50 rounded-lg p-0.5 border border-gray-700/50 shrink-0"
            >
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-400 hover:text-white hover:bg-gray-700"
                title="搜索 (Ctrl+F)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="自动换行: 关闭"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-text-align-justify"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 5h18"
                  />
                  <path
                    d="M3 12h18"
                  />
                  <path
                    d="M3 19h18"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-r border-gray-700 mr-1 text-gray-500 hover:text-gray-300"
                title="显示行号"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-list-ordered"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5h10"
                  />
                  <path
                    d="M11 12h10"
                  />
                  <path
                    d="M11 19h10"
                  />
                  <path
                    d="M4 4h1v5"
                  />
                  <path
                    d="M4 9h2"
                  />
                  <path
                    d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-700 cursor-not-allowed"
                disabled=""
                title="Undo (Ctrl+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-ccw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                  />
                  <path
                    d="M3 3v5h5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-700 cursor-not-allowed"
                disabled=""
                title="Redo (Ctrl+Shift+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-cw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all bg-gray-700 text-blue-400 shadow-sm"
                title="Edit Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-pen-line"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21h8"
                  />
                  <path
                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="Preview Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-eye"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-l border-gray-700 ml-1 text-gray-500 hover:text-gray-300"
                title="开启分屏对比"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-columns2 lucide-columns-2"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M12 3v18"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex-1 overflow-hidden relative bg-[#0d1117]"
          >
            <div
              class="h-full relative flex"
            >
              <div
                class="w-full h-full transition-all"
              >
                <div
                  class="flex h-full w-full relative overflow-hidden"
                >
                  <textarea
                    class="
                flex-1 h-full w-full bg-[#0d1117] text-gray-300 resize-none focus:outline-none
                font-mono text-sm sm:text-base leading-relaxed
                pt-4 sm:pt-6 pb-20
                pl-4 sm:pl-6
                whitespace-pre overflow-x-auto
                
            "
                    placeholder="在此处开始您的创作..."
                    spellcheck="false"
                  >
                    content
                  </textarea>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
  </div>
</div>
`;

exports[`MainLayout - 快照测试 面板切换交互 应该支持聊天面板开关 1`] = `
<div>
  <div
    class="flex h-[100dvh] bg-gray-950 text-gray-100 font-sans overflow-hidden relative selection:bg-blue-500/30"
  >
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
    <main
      class="flex-1 flex flex-col min-w-0 relative transition-all duration-300"
    >
      <header
        class="flex items-center justify-between px-4 py-3 bg-gray-900 border-b border-gray-800 md:hidden shrink-0 select-none"
      >
        <button
          class="p-1 -ml-1 text-gray-400 active:text-white"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="font-bold text-gray-200 truncate max-w-[200px] text-sm"
        >
          test.md
        </span>
        <button
          class="p-1 -mr-1 text-blue-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-message-square"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
            />
          </svg>
        </button>
      </header>
      <div
        class="hidden md:flex items-center justify-between bg-gray-900 border-b border-gray-800 h-10 px-4 shrink-0 select-none"
      >
        <div
          class="flex items-center gap-2 text-gray-500"
        >
          <button
            class="hover:text-white transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left-close"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="m16 15-3-3 3-3"
              />
            </svg>
          </button>
          <span
            class="text-xs"
          >
            Test Project
             / 
            test.md
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="flex items-center gap-1 text-xs px-2 py-1 rounded transition-colors bg-blue-600/20 text-blue-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            Agent
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-hidden relative bg-[#0d1117]"
      >
        <div
          class="flex flex-col h-full bg-[#0d1117] w-full h-full"
        >
          <div
            class="flex items-center justify-between px-2 sm:px-4 py-2 border-b shrink-0 transition-colors bg-[#161b22] border-gray-800"
          >
            <div
              class="flex items-center gap-2 min-w-0 flex-1 overflow-hidden"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text text-blue-400 shrink-0"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span
                class="truncate font-mono text-xs sm:text-sm text-gray-200"
              >
                test.md
              </span>
              <span
                class="text-[10px] text-gray-500 font-mono hidden sm:inline"
              >
                7
                 字
              </span>
              <span
                class="text-[10px] text-gray-600 font-mono hidden md:inline"
              >
                Ln 
                1
                , Col 
                1
              </span>
            </div>
            <div
              class="flex items-center gap-0.5 sm:gap-1 bg-gray-800/50 rounded-lg p-0.5 border border-gray-700/50 shrink-0"
            >
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-400 hover:text-white hover:bg-gray-700"
                title="搜索 (Ctrl+F)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="自动换行: 关闭"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-text-align-justify"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 5h18"
                  />
                  <path
                    d="M3 12h18"
                  />
                  <path
                    d="M3 19h18"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-r border-gray-700 mr-1 text-gray-500 hover:text-gray-300"
                title="显示行号"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-list-ordered"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5h10"
                  />
                  <path
                    d="M11 12h10"
                  />
                  <path
                    d="M11 19h10"
                  />
                  <path
                    d="M4 4h1v5"
                  />
                  <path
                    d="M4 9h2"
                  />
                  <path
                    d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-700 cursor-not-allowed"
                disabled=""
                title="Undo (Ctrl+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-ccw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                  />
                  <path
                    d="M3 3v5h5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-700 cursor-not-allowed"
                disabled=""
                title="Redo (Ctrl+Shift+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-cw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all bg-gray-700 text-blue-400 shadow-sm"
                title="Edit Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-pen-line"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21h8"
                  />
                  <path
                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="Preview Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-eye"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-l border-gray-700 ml-1 text-gray-500 hover:text-gray-300"
                title="开启分屏对比"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-columns2 lucide-columns-2"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M12 3v18"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex-1 overflow-hidden relative bg-[#0d1117]"
          >
            <div
              class="h-full relative flex"
            >
              <div
                class="w-full h-full transition-all"
              >
                <div
                  class="flex h-full w-full relative overflow-hidden"
                >
                  <textarea
                    class="
                flex-1 h-full w-full bg-[#0d1117] text-gray-300 resize-none focus:outline-none
                font-mono text-sm sm:text-base leading-relaxed
                pt-4 sm:pt-6 pb-20
                pl-4 sm:pl-6
                whitespace-pre overflow-x-auto
                
            "
                    placeholder="在此处开始您的创作..."
                    spellcheck="false"
                  >
                    content
                  </textarea>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
  </div>
</div>
`;

exports[`MainLayout - 快照测试 项目文件管理 应该显示项目概览 1`] = `
<div>
  <div
    class="flex h-[100dvh] bg-gray-950 text-gray-100 font-sans overflow-hidden relative selection:bg-blue-500/30"
  >
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
    <main
      class="flex-1 flex flex-col min-w-0 relative transition-all duration-300"
    >
      <header
        class="flex items-center justify-between px-4 py-3 bg-gray-900 border-b border-gray-800 md:hidden shrink-0 select-none"
      >
        <button
          class="p-1 -ml-1 text-gray-400 active:text-white"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h16"
            />
            <path
              d="M4 12h16"
            />
            <path
              d="M4 19h16"
            />
          </svg>
        </button>
        <span
          class="font-bold text-gray-200 truncate max-w-[200px] text-sm"
        >
          test.md
        </span>
        <button
          class="p-1 -mr-1 text-blue-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-message-square"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
            />
          </svg>
        </button>
      </header>
      <div
        class="hidden md:flex items-center justify-between bg-gray-900 border-b border-gray-800 h-10 px-4 shrink-0 select-none"
      >
        <div
          class="flex items-center gap-2 text-gray-500"
        >
          <button
            class="hover:text-white transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left-close"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="m16 15-3-3 3-3"
              />
            </svg>
          </button>
          <span
            class="text-xs"
          >
            Test Project
             / 
            test.md
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="flex items-center gap-1 text-xs px-2 py-1 rounded transition-colors bg-blue-600/20 text-blue-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            Agent
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-hidden relative bg-[#0d1117]"
      >
        <div
          class="flex flex-col h-full bg-[#0d1117] w-full h-full"
        >
          <div
            class="flex items-center justify-between px-2 sm:px-4 py-2 border-b shrink-0 transition-colors bg-[#161b22] border-gray-800"
          >
            <div
              class="flex items-center gap-2 min-w-0 flex-1 overflow-hidden"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text text-blue-400 shrink-0"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span
                class="truncate font-mono text-xs sm:text-sm text-gray-200"
              >
                test.md
              </span>
              <span
                class="text-[10px] text-gray-500 font-mono hidden sm:inline"
              >
                7
                 字
              </span>
              <span
                class="text-[10px] text-gray-600 font-mono hidden md:inline"
              >
                Ln 
                1
                , Col 
                1
              </span>
            </div>
            <div
              class="flex items-center gap-0.5 sm:gap-1 bg-gray-800/50 rounded-lg p-0.5 border border-gray-700/50 shrink-0"
            >
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-400 hover:text-white hover:bg-gray-700"
                title="搜索 (Ctrl+F)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-search"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-4.34-4.34"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="8"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="自动换行: 关闭"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-text-align-justify"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 5h18"
                  />
                  <path
                    d="M3 12h18"
                  />
                  <path
                    d="M3 19h18"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-r border-gray-700 mr-1 text-gray-500 hover:text-gray-300"
                title="显示行号"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-list-ordered"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 5h10"
                  />
                  <path
                    d="M11 12h10"
                  />
                  <path
                    d="M11 19h10"
                  />
                  <path
                    d="M4 4h1v5"
                  />
                  <path
                    d="M4 9h2"
                  />
                  <path
                    d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-700 cursor-not-allowed"
                disabled=""
                title="Undo (Ctrl+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-ccw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                  />
                  <path
                    d="M3 3v5h5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all border-r border-gray-700 mr-0.5 sm:mr-1 text-gray-700 cursor-not-allowed"
                disabled=""
                title="Redo (Ctrl+Shift+Z)"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-rotate-cw"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all bg-gray-700 text-blue-400 shadow-sm"
                title="Edit Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-pen-line"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21h8"
                  />
                  <path
                    d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                  />
                </svg>
              </button>
              <button
                class="flex items-center justify-center w-7 h-7 sm:w-8 sm:h-7 rounded transition-all text-gray-500 hover:text-gray-300"
                title="Preview Mode"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-eye"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="hidden sm:flex items-center justify-center w-8 h-7 rounded transition-all border-l border-gray-700 ml-1 text-gray-500 hover:text-gray-300"
                title="开启分屏对比"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-columns2 lucide-columns-2"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="18"
                    rx="2"
                    width="18"
                    x="3"
                    y="3"
                  />
                  <path
                    d="M12 3v18"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="flex-1 overflow-hidden relative bg-[#0d1117]"
          >
            <div
              class="h-full relative flex"
            >
              <div
                class="w-full h-full transition-all"
              >
                <div
                  class="flex h-full w-full relative overflow-hidden"
                >
                  <textarea
                    class="
                flex-1 h-full w-full bg-[#0d1117] text-gray-300 resize-none focus:outline-none
                font-mono text-sm sm:text-base leading-relaxed
                pt-4 sm:pt-6 pb-20
                pl-4 sm:pl-6
                whitespace-pre overflow-x-auto
                
            "
                    placeholder="在此处开始您的创作..."
                    spellcheck="false"
                  >
                    content
                  </textarea>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="w-1 hover:w-1.5 h-full bg-gray-800 hover:bg-blue-500 cursor-col-resize transition-all z-40 shrink-0 touch-none"
    />
  </div>
</div>
`;
